2008-11-12    <neal@bcn.boulder.co.us>

	* electionaudits/parsers.py (parse_xml_crystal): 
	Normalize contest names and candidate names: strip extra white space
	in case different databases vary them for subtle formatting reasons
	
	* electionaudits/erandom.py (ssr): 
	Add ssr (Sum of Square Roots) random number generator (Rivest)

	* electionaudits/models.py (Batch.ssr): 
	Add NEGEXP threshhold for ContestBatch to compare to ssr (commented out)
	
	* electionaudits/templates/electionaudits/report.html: 
	Put contest name first in <title>
	Don't sort by batch object - makes order unstable
	
	* electionaudits/templates/electionaudits/reports.html: 
	Comment out references to PPEBWR stats
	
2008-11-10    <neal@bcn.boulder.co.us>

	* electionaudits/util.py (AuditUnit.update): 
	Allow commas in vote counts, e.g. 1,345
	
	* electionaudits/models.py (ContestBatch): 
	Add "proportion" to Contest for scaling selection numbers
	Add random_seed, for use of verifiably seeded RNGs like Rivest's SSR
	Add "selected" to ContestBatch
	Add "notes" to ContestBatch and Batch

2008-11-05    <neal@bcn.boulder.co.us>

	* electionaudits/models.py (Contest): 
	Add confidence and overall_margin to Contest and use them
	in calculating and displaying statistics.

	* electionaudits/admin.py (CountyElectionAdmin): 
	Allow all contest margins, confidence levels to be audited inline by
	linking them to the appropriate CountyElection and using ContestInline

	* electionaudits/util.py (AuditUnit.__init__): 
	Create election and contest database records when first mentioned,
	so they are created and listed in sequence.

	* electionaudits/templates/electionaudits/report.html: 
	Clarify statistics more
	Improve README
	
2008-11-03    <neal@bcn.boulder.co.us>

	* electionaudits/tests.py (SimpleTest.test_reports): 
	Add some unit tests: run via `manage.py test electionaudits`

	* setup.py: 
	Generate sdist from original trunk rather than a different bzr branch,
	to avoid bzr munging of mod times.