@@ -11,7 +11,7 @@
 <ul>
 <li>Overall margin of victory is {{ object.overall_margin|floatformat:3 }}%</li>
 <li>Margin of victory in this county is {{ object.margin|floatformat:3 }}%</li>
-<li>Number of audit units to audit (NEGEXP, {{ object.confidence }}% confidence): {{ object.stats.negexp_precincts|floatformat:0 }}</li>
+<li>Number of audit units to audit (NEGEXP, {{ object.confidence }}% confidence): {{ object.stats.negexp_precincts|floatformat:1 }}</li>
 </ul>
 <p>See <a href="#stats">additional statistical information below...</a></p>
 
