@@ -48,7 +48,7 @@ A. Aslam, Raluca A. Popa and Ronald L. Rivest</a></p>
 <tbody>
         {% for contest in object_list %}
 <tr>
- <td><a href="{{ contest.id }}">{{ contest.name }}</a></td>
+ <td><a href="{{ contest.id }}/">{{ contest.name }}</a></td>
  <td style="text-align: right;">{{ contest.contestbatch_set.all|length }}</td>
  <td style="text-align: right;">{{ contest.overall_margin|floatformat:3 }}</td>
  <td style="text-align: right;">{{ contest.margin|floatformat:3 }}</td>
